--- a/style.css
+++ b/style.css
@@ -55,3 +55,33 @@ textarea{
 .mainbtn:focus{
     color: grey;
 }
+
+
+@media (max-width:1120px) {
+    .centerDiv textarea{
+        width: 50rem;
+    }
+}
+
+@media (max-width:850px)
+{
+    #msg{
+        font-size: 20px;
+    }
+    .centerDiv h1{
+        font-size: 25px;
+        margin-bottom: 20px;
+    }
+    .centerDiv textarea{
+        width: 40rem;
+    }
+}
+
+@media (max-width:680px)
+{
+    .centerDiv textarea{
+        width: 30rem;
+        height: 15rem;
+    }
+
+}
